# neural_processor

./: CMakeLists.txt
data/: initial_data.txt  initial_data1.txt  initial_data2.txt  initial_data5.txt  initial_data_10.txt  initial_data_15.txt
neural_hw/: addr.h  bus.cpp  bus.h  control_unit.cpp  control_unit.h  cpu.cpp  cpu.h  iocontroller.cpp  iocontroller.h  local_mem.cpp  local_mem.h  main.cpp  net_config.cpp  net_config.h  nodes.h
